style(Design): :lipstick: Overflow issue
Added overflow-x in hopes of it fixing scroll issue on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,7 @@
 
 html,
 body {
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
 }
